refactored production code & created detail layout
* Removed fragment_main.xml and put all code in activity_main.xml because
the layout did not need to be a fragment. It is to imprice layout
structure clarity.

* Created detail layouts for phone portrait and also started a bit on phone
landscape layouts.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:gridlayout-v7:23.1.0'
+    compile 'com.android.support:cardview-v7:23.1.0'
     compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '2.0.0'
 }
