--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,8 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:gridlayout-v7:23.1.0'
     compile 'com.android.support:cardview-v7:23.1.0'
+    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.3@aar'){
+        transitive=true
+    }
     compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '2.0.0'
 }
