Added & modified persistent search bar library
Modifcations:
* Added ripple to hamburg/arrow button
* Customized the hamburg/arrow button to be scalable with floats and not
just integers.
* Added a custom EditText to the library that removes focus from edit text
once back button is pressed.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.4@aar'){
         transitive=true
     }
+    compile project(':persistent-search')
     compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '2.0.0'
 }
