--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app'
+include ':app', ':persistent-search'
+project(':persistent-search').projectDir = new File('app/libs/persistent-search')
