--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mcochin.stockstreakz" >
+    package="com.mcochin.stockstreaks" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,9 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.mcochin.stockstreaks.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -21,11 +21,10 @@
         </activity>
 
         <activity
-            android:name=".DetailActivity"
-            android:parentActivityName=".MainActivity">
+            android:name="com.mcochin.stockstreaks.DetailActivity"
+            android:parentActivityName="com.mcochin.stockstreaks.MainActivity">
         </activity>
 
-        <service android:name=".services.NetworkService"/>
+        <service android:name="com.mcochin.stockstreaks.services.NetworkService"/>
     </application>
-
 </manifest>
