--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,31 @@
             android:parentActivityName="com.mcochin.stockstreaks.MainActivity">
         </activity>
 
-        <service android:name=".services.MainService"/>
-        <service android:name=".services.DetailService"/>
-
         <provider
             android:name=".data.StockProvider"
             android:authorities="com.mcochin.stockstreaks"
             android:exported="false" />
+
+        <service android:name=".services.MainService"/>
+        <service android:name=".services.DetailService"/>
+
+        <!-- Widget -->
+        <receiver
+            android:name=".widget.StockWidgetProvider"
+            android:label="@string/app_name"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.mcochin.stockstreaks.widget.ACTION_DATA_REFRESH"/>
+                <action android:name="com.mcochin.stockstreaks.widget.ACTION_DATA_MIRROR_APP" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info_stock" />
+        </receiver>
+        <service
+            android:name=".widget.StockWidgetRemoteViewsService"
+            android:enabled="true"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 </manifest>
