--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,7 @@
         <!-- Widget -->
         <receiver
             android:name=".widget.StockWidgetProvider"
-            android:label="@string/app_name"
-            android:enabled="true">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.mcochin.stockstreaks.widget.ACTION_DATA_REFRESH"/>
@@ -50,7 +49,6 @@
         </receiver>
         <service
             android:name=".widget.StockWidgetRemoteViewsService"
-            android:enabled="true"
             android:exported="false"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
