--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,10 +41,13 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-                <action android:name="com.mcochin.stockstreaks.widget.ACTION_DATA_REFRESH"/>
-                <action android:name="com.mcochin.stockstreaks.widget.ACTION_DATA_MIRROR_APP" />
+                <action android:name="android.appwidget.action.APPWIDGET_ENABLED" />
+                <action android:name="android.appwidget.action.APPWIDGET_DISABLED" />
+                <action android:name="com.mcochin.stockstreaks.widget.DATA_UPDATING"/>
+                <action android:name="com.mcochin.stockstreaks.widget.DATA_UPDATED"/>
+                <action android:name="com.mcochin.stockstreaks.widget.DATA_UPDATE_ERROR"/>
             </intent-filter>
-            <meta-mData android:name="android.appwidget.provider"
+            <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_stock" />
         </receiver>
         <service
