fixed bug that caused a symbol request to be lost

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             android:authorities="com.mcochin.stockstreaks"
             android:exported="false" />
 
-        <service android:name=".services.MainService"/>
+        <service android:name=".services.MainService"
+            android:stopWithTask="true"/>
         <service android:name=".services.DetailService"/>
 
         <!-- Widget -->
