--- a/app/libs/persistent-search/build.gradle
+++ b/app/libs/persistent-search/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    compile 'com.nineoldandroids:library:2.4.0+'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
 }
