--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
 
         <service android:name=".services.MainService" />
         <service android:name=".services.DetailService"/>
+        <service android:name=".services.TestService"/>
 
         <!-- Widget -->
         <receiver
