--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,12 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:gridlayout-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile project(':persistent-search')
+    compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '2.0.0'
     compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.5@aar'){
         transitive=true
     }
-    compile project(':persistent-search')
-    compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '2.0.0'
 }
