--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         <activity
             android:name="com.mcochin.stockstreaks.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +25,11 @@
         <activity
             android:name="com.mcochin.stockstreaks.DetailActivity"
             android:theme="@style/AppTheme.Detail"
+            android:parentActivityName="com.mcochin.stockstreaks.MainActivity">
+        </activity>
+
+        <activity
+            android:name="com.mcochin.stockstreaks.BarChartActivity"
             android:parentActivityName="com.mcochin.stockstreaks.MainActivity">
         </activity>
 
