--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
 
         <activity
             android:name="com.mcochin.stockstreaks.BarChartActivity"
+            android:theme="@style/AppTheme.BarChart"
             android:parentActivityName="com.mcochin.stockstreaks.MainActivity">
+
+            <meta-data android:name="string"
+                android:value="@string/app_name" />
         </activity>
 
         <provider
