--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "com.mcochin.stockstreaks"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "1.0" //If you update this also update the About dialog version string too!
     }
     buildTypes {
         release {
