--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -8,10 +9,16 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0" //If you update this also update the About dialog version string too!
+        versionName "1.0.0" //If you update this also update the About dialog version string too!
     }
     buildTypes {
         release {
+            minifyEnabled false
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug{
+            debuggable true
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -29,13 +36,22 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'com.google.android.gms:play-services-analytics:8.4.0'
     compile 'com.yahoofinance-api:YahooFinanceAPI:2.0.0'
-    compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    // Optimization to speed up event bus
+    // http://greenrobot.org/eventbus/documentation/subscriber-index/
+    apt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
     compile project(':persistent-search')
     compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.6@aar') {
         transitive = true
     }
     compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
         transitive = true
+    }
+}
+
+apt {
+    arguments {
+        eventBusIndex "com.mcochin.stockstreaks.custom.MyEventBusIndex"
     }
 }
