--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,22 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0.0" //If you update this also update the About dialog version string too!
+        versionName "1.0.0" // If you update this also update the About dialog version string too!
+    }
+    signingConfigs { // To config the variables for these, go to the gradle.properties (Global)
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
